@@ -233,6 +233,10 @@ set none, one, several, or all options. The available options are as follows:
     \item{\code{prefixes}}{A four-item character vector to specify the prefixes used when output is directed
     to the R console; the default is \code{c("Rcmdr> ", "Rcmdr+ ", "RcmdrMsg: ", "RcmdrMsg+ ")}.}
     
+    \item{\code{quit.R.on.close}}{if \code{TRUE}, both the Commander and R are exited when the Commander
+    window is closed. The default is \code{FALSE}, in which case only the Commander is exited (and can be restarted
+    by the command \code{Commander()}).}
+    
     \item{\code{suppress.menus}}{if \code{TRUE}, the Commander menu bar and tool bar are suppressed, allowing another
     program (such as Excel) to take over these functions. The default (of course) is \code{FALSE}.}
             
